force-app/main/default/objects/CVS_Visit__c/CVS_Visit__c.object-meta.xml
<CustomObject>
    <label>CVS Visit</label>
    <nameField>
        <displayFormat>V-{00000}</displayFormat>
        <label>CVS Visit</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CVS Visits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>