force-app/main/default/objects/CVS_Visit__c/fields/CVS__c.field-meta.xml
<CustomField>
    <fullName>CVS__c</fullName>
    <label>CVS Volunteer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CVS Visits</relationshipLabel>
    <relationshipName>CVS_Visitors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>