force-app/main/default/objects/CVS_Visit__c/fields/Resident__c.field-meta.xml
<CustomField>
    <fullName>Resident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resident</label>
    <referenceTo>Resident__c</referenceTo>
    <relationshipLabel>CVS Visits</relationshipLabel>
    <relationshipName>CVS_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>