force-app/main/default/objects/CVS_Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_of_Visit__c</columns>
    <columns>CVS__c</columns>
    <columns>Facility__c</columns>
    <columns>Resident__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>